@@ -374,7 +374,7 @@
   </module>
   <module name="eog">
     <version release="gnome-1.4">
-      <component name="eog" dir="eog" group="core">
+      <component name="eog" dir="eog" group="extras">
 	<podir dir="po"/>
 	<potname name="eog.pot"/>
 	<branch name="eog-for-gnome-1-4"/>
@@ -992,13 +992,13 @@
     </version>
   </module>
   <module name="gnome-chess">
-    <version release="gnome-1.4">
+    <version release="gnome-2.4">
       <component name="gnome-chess" dir="gnome-chess" group="extras">
-	<podir dir="po"/>
-	<potname name="gnome-chess.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
+        <podir dir="po"/>
+        <potname name="gnome-chess.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
       </component>
     </version>
   </module>
