@@ -1,3 +1,9 @@
+2003-05-09  Abel Cheung  <maddog@linux.org.hk>
+
+	* translation-status.xml: Move gnome-chess to GNOME 2.4, it has
+	  started porting to gtk2. Eog is not core software in GNOME 1.4.
+	  (is it possible to fix the duplicated group name IDs?)
+
 2003-05-07  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Added gnome-themes-extras.
